Changed time for scheduler